--- a/index.html
+++ b/index.html
@@ -8,6 +8,62 @@
     <title>Box Shadow Generator</title>
 </head>
 <body>
-    <h1>Teste</h1>
+    <div id="box-shadow-generator">
+        <div id="controls-container">
+            <h2>Configurações da Box-Shadow</h2>
+            <div class="form-control">
+                <div class="range-input">
+                    <label for="horizontal">Deslocamento horizontal: </label>
+                    <input type="range" id="horizontal" name="horizontal" min="-100" max="100" value="5">
+                </div>
+                <div class="reference-input">
+                    <input type="text" id="horizontal-value" name="horizontal-value">
+                    <p>px</p>
+                </div>
+            </div>
+            <div class="form-control">
+                <div class="range-input">
+                    <label for="vertical">Deslocamento vertical: </label>
+                    <input type="range" id="vertical" name="vertical" min="-100" max="100" value="5">
+                </div>
+                <div class="reference-input">
+                    <input type="text" id="vertical-value" name="vertical-value">
+                    <p>px</p>
+                </div>
+            </div>
+            <div class="form-control">
+                <div class="range-input">
+                    <label for="blur">Intensidade do blur: </label>
+                    <input type="range" id="blur" name="blur" min="0" max="100" value="10">
+                </div>
+                <div class="reference-input">
+                    <input type="text" id="blur-value" name="blur-value">
+                    <p>px</p>
+                </div>
+            </div>
+            <div class="form-control">
+                <div class="range-input">
+                    <label for="spread">Spread: </label>
+                    <input type="range" id="spread" name="spread" min="-100" max="100" value="5">
+                </div>
+                <div class="reference-input">
+                    <input type="text" id="spread-value" name="spread-value">
+                    <p>px</p>
+                </div>
+            </div>
+        </div>
+        <div id="preview">
+            <h2>Preview do efeito gerado</h2>
+            <div id="box"></div>
+        </div>
+    </div>
+    <div id="generated-rule">
+        <h2>Copie e cole no seu arquivo CSS</h2>
+        <div id="rules-area">
+            <p id="rule">Box-shadow <span></span></p>
+            <p id="webkit-rule">Webkit-Box-shadow <span></span></p>
+            <p id="moz-rule">Moz-Box-shadow <span></span></p>
+        </div>
+    </div>
 </body>
 </html>
