--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="reference-input">
                     <input type="text" id="horizontal-value" name="horizontal-value">
-                    <p>px</p>
+                    <p id="px">px</p>
                 </div>
             </div>
             <div class="form-control">
@@ -28,7 +28,7 @@
                 </div>
                 <div class="reference-input">
                     <input type="text" id="vertical-value" name="vertical-value">
-                    <p>px</p>
+                    <p id="px">px</p>
                 </div>
             </div>
             <div class="form-control">
@@ -38,17 +38,17 @@
                 </div>
                 <div class="reference-input">
                     <input type="text" id="blur-value" name="blur-value">
-                    <p>px</p>
+                    <p id="px">px</p>
                 </div>
             </div>
             <div class="form-control">
                 <div class="range-input">
-                    <label for="spread">Spread: </label>
+                    <label for="spread">Intensidade do espalhamento: </label>
                     <input type="range" id="spread" name="spread" min="-100" max="100" value="5">
                 </div>
                 <div class="reference-input">
                     <input type="text" id="spread-value" name="spread-value">
-                    <p>px</p>
+                    <p id="px">px</p>
                 </div>
             </div>
         </div>
