--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <div id="generated-rule">
         <h2>Copie e cole no seu arquivo CSS</h2>
         <div id="rules-area">
-            <p id="rule">Box-shadow <span></span></p>
-            <p id="webkit-rule">Webkit-Box-shadow <span></span></p>
-            <p id="moz-rule">Moz-Box-shadow <span></span></p>
+            <p id="rule">Box-shadow: <span></span></p>
+            <p id="webkit-rule">Webkit-Box-shadow: <span></span></p>
+            <p id="moz-rule">Moz-Box-shadow: <span></span></p>
         </div>
     </div>
 </body>
