New elements was selected and added in constructor

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="form-control">
                 <div class="range-input">
-                    <label for="spread">Cor da sombra: </label>
+                    <label for="color">Cor da sombra: </label>
                     <input type="color" id="color" name="color" value="#000000">
                 </div>
                 <div class="reference-input">
@@ -64,10 +64,6 @@
                 <div class="range-input">
                     <label for="opacity">Opacidade: </label>
                     <input type="range" id="opacity" name="opacity" min="0" max="1" value="1" step="0.01">
-                </div>
-                <div class="reference-input">
-                    <input type="text" id="opacity-value" name="opacity-value">
-                    <p id="px">px</p>
                 </div>
             </div>
             <div class="form-control">
