New event to add opacity in shadow was added

--- a/index.html
+++ b/index.html
@@ -65,11 +65,8 @@
                     <label for="opacity">Opacidade: </label>
                     <input type="range" id="opacity" name="opacity" min="0" max="1" value="1" step="0.01">
                 </div>
-            </div>
-            <div class="form-control">
-                <div class="range-input">
-                    <label for="opacity">Sombra interna ? (Inset)</label>
-                    <input type="checkbox" id="inset" name="inset">
+                <div class="reference-input">
+                    <input type="text" id="opacity-value" name="opacity-value">
                 </div>
             </div>
         </div>
